--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
         <script type="text/javascript" src="bundle/index.js" charset="utf-8"></script>
         <script type="text/javascript" src="bundle/jquery-3.1.1.js"></script>
         <!--<script type="text/javascript" src="./src/js/pages.js"></script>-->
+        <div>2016年9月1号举行10周年校庆</div>
         <div class="content-wrap">
-            <div id="title">这是我的web1.0！!!!!</div>
+            <div id="title">IT入门</div>
             <div class="test-area">~ 翬 ~</div>
             <div class="img-container" id="content">
                 <div class="img-11"></div>
